<?xml version="1.0" encoding="utf-8"?>  
<resources>

    <string name="app_name">Tethering Timer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="off_label">to be OFF</string>
    <string name="on_label">to be ON</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="notify_summary">WIFI-AP under surveillance. </string>
    
    <string name="org_wifi_msg">Default Wifi:</string>
    <string name="wifi_msg">Wifi status:</string>
    <string name="wifi_ap_msg">Wifi-AP Stat.:</string>
	<string name="remain_msg">Remain time:</string>
	<string name="time_left_msg">Wait time (effective from next time) </string>
	<string name="setting_msg">Settings</string>
	<string name="extend_msg">Time extension</string>
	<string name="wifi_stat_msg_stop">Stop</string>
    <string name="wifi_stat_msg_exec">Execute</string>
    <string name="time_data">0000</string>
    
    <string name="toast_service_start">Start timer Servie</string>
    <string name="toast_service_stop">Stop timer Servie</string>
    <string name="toast_button_error">Manually, it does not come by ON/OFF.</string>
	<string name="toast_button_msg">Wait time setting is possible in a tap and swipe.\n Double-tap: Set up in 1 hour. \n Tap: It is omission about a second. \n right and left swipe:time change \n Long aggressiveness: Cancellation</string>
    
    <string name="time_disp_h">%1$d:%2$02d:%3$02d</string>
    <string name="time_disp_m">%1$02d:%2$02d</string>
    <string name="time_disp_s">%1$02d</string>
    <string name="time_disp_up">Time UP</string>
    
</resources>
