<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
	android:background="#000000"
    tools:context=".MainActivity" >

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0px"
		android:layout_weight="1"
		android:orientation="horizontal" >

		<TextView
		    android:id="@+id/textView_org_wifi_msg"
		    android:layout_width="0px"
		    android:layout_height="fill_parent"
		    android:layout_weight="2"
		    android:gravity="center_vertical|center_horizontal|left"
		    android:text="@string/org_wifi_msg"
		    android:textAppearance="?android:attr/textAppearanceLarge"
		    android:textColor="#ffffff" />

		<TextView
			android:id="@+id/textView_org_wifi_stat"
			android:layout_width="0px"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:gravity="center_vertical|center_horizontal|right"
			android:text="@string/wifi_stat_msg_stop"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:visibility="invisible" />

		<ToggleButton
		    android:id="@+id/toggleButton_org_wifi_stat"
		    android:layout_width="0px"
		    android:layout_height="fill_parent"
		    android:layout_weight="1"
		    android:gravity="center_vertical|center_horizontal|top"
		    android:text="ToggleButton" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0px"
		android:layout_weight="1"
		android:orientation="horizontal" >

		<TextView
			android:id="@+id/textView_wifi_msg"
			android:layout_width="0px"
			android:layout_height="fill_parent"
			android:text="@string/wifi_msg"
			android:gravity="center_vertical|center_horizontal|left"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_weight="2"
		    android:textColor="#ffffff" />
		
		<TextView
			android:id="@+id/textView_wifi_stat"
			android:layout_width="0px"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:gravity="center_vertical|center_horizontal|right"
			android:text="@string/wifi_stat_msg_stop"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:visibility="invisible" />

		<ToggleButton
			android:id="@+id/toggleButton_wifi_stat"
			android:layout_width="0px"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:gravity="center_vertical|center_horizontal|top"
			android:text="ToggleButton" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0px"
		android:layout_weight="1"
 		android:orientation="horizontal" >

		<TextView
			android:id="@+id/textView_wifi_ap_msg"
			android:layout_width="0px"
			android:layout_height="fill_parent"
			android:text="@string/wifi_ap_msg"
			android:gravity="center_vertical|center_horizontal|left"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_weight="2"
		    android:textColor="#ffffff" />
		
		<TextView
			android:id="@+id/textView_wifi_ap_stat"
			android:layout_width="0px"
			android:layout_height="fill_parent"
			android:text="@string/wifi_stat_msg_stop"
			android:gravity="center_vertical|center_horizontal|right"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_weight="1"
			android:visibility="invisible" />

		<ToggleButton
			android:id="@+id/toggleButton_wifi_ap_stat"
			android:layout_width="0px"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:gravity="center_vertical|center_horizontal|top"
			android:text="ToggleButton" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0px"
		android:orientation="horizontal" 
		android:layout_weight="1">

		<TextView
			android:id="@+id/textView_remain_msg"
			android:layout_width="0px"
			android:layout_height="fill_parent"
			android:text="@string/remain_msg"
			android:gravity="center_vertical|center_horizontal|left"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_weight="3"
		    android:textColor="#ffffff" />
		
		<TextView
			android:id="@+id/textView_remain"
			android:layout_width="0px"
			android:layout_height="fill_parent"
			android:layout_weight="4"
			android:text="@string/time_data"
			android:gravity="center_vertical|center_horizontal|right"
			android:textAppearance="?android:attr/textAppearanceLarge"
		    android:textColor="#ffffff" />
		
	</LinearLayout>    

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0px"
		android:layout_weight="1"
		android:orientation="horizontal" >

		<TextView
			android:id="@+id/textView_time_left_meg"
			android:layout_width="0px"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:gravity="bottom"
			android:text="@string/time_left_msg"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textSize="@dimen/activity_vertical_margin"
		    android:textColor="#ffffff" />
		
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0px"
		android:layout_weight="1"
		android:orientation="horizontal" >

		<TextView
			android:id="@+id/textView_time_left"
			android:layout_width="0px"
			android:layout_height="fill_parent"
			android:text="@string/time_data"
			android:gravity="center_vertical|center_horizontal|right"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_weight="4"
		    android:textColor="#ffffff" />
		
		<TextView
			android:id="@+id/textView_dummy"
			android:layout_width="0px"
			android:layout_height="fill_parent"
			android:text=""
			android:gravity="center_vertical|center_horizontal|right"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_weight="1"/>

		<Button
			android:id="@+id/button_setting"
			android:layout_width="0px"
			android:layout_height="fill_parent"
			android:text="@string/setting_msg"
			android:textSize="@dimen/activity_horizontal_margin"
			android:textStyle="bold|italic" 
			android:layout_weight="2">          
		</Button>

	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0px"
		android:orientation="vertical" 
		android:layout_weight="2">

		<Button
			android:id="@+id/button_stop"
			android:layout_width="fill_parent"
			android:layout_height="0px"
			android:text="@string/wifi_stat_msg_stop"
			android:textSize="@dimen/activity_horizontal_margin"
			android:textStyle="bold|italic" 
			android:layout_weight="1">          
		</Button>

		<Button
			android:id="@+id/button_extend"
			android:layout_width="fill_parent"
			android:layout_height="0px"
			android:text="@string/extend_msg"
			android:textSize="@dimen/activity_horizontal_margin"
			android:textStyle="bold|italic" 
			android:layout_weight="1">          
		</Button>

	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0px"
		android:orientation="vertical" 
		android:layout_weight="2">

		<TextView
			android:id="@+id/textView_tapp_area"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:text=""
			android:textAppearance="?android:attr/textAppearanceLarge"/>
	    	    
	</LinearLayout>
</LinearLayout>